aic94xx/4.x/compile.log
In file included from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_hwi.h:37,
                 from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_reg.h:31,
                 from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:38:
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_sas.h:343:8: error: redefinition of 'struct ssp_command_iu'
 struct ssp_command_iu {
        ^~~~~~~~~~~~~~
In file included from ./include/scsi/libsas.h:15,
                 from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx.h:33,
                 from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:37:
./include/scsi/sas.h:330:8: note: originally defined here
 struct ssp_command_iu {
        ^~~~~~~~~~~~~~
In file included from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_hwi.h:37,
                 from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_reg.h:31,
                 from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:38:
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_sas.h:364:8: error: redefinition of 'struct xfer_rdy_iu'
 struct xfer_rdy_iu {
        ^~~~~~~~~~~
In file included from ./include/scsi/libsas.h:15,
                 from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx.h:33,
                 from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:37:
./include/scsi/sas.h:352:8: note: originally defined here
 struct xfer_rdy_iu {
        ^~~~~~~~~~~
In file included from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_reg.h:31,
                 from /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:38:
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_hwi.h: In function 'asd_init_ascb':
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_hwi.h:295:2: error: implicit declaration of function 'init_timer'; did you mean 'init_timers'? [-Werror=implicit-function-declaration]
  init_timer(&ascb->timer);
  ^~~~~~~~~~
  init_timers
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c: At top level:
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:71:3: error: 'struct scsi_host_template' has no member named 'use_clustering'
  .use_clustering  = ENABLE_CLUSTERING,
   ^~~~~~~~~~~~~~
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:71:21: error: 'ENABLE_CLUSTERING' undeclared here (not in a function); did you mean 'TABLE_ROUTING'?
  .use_clustering  = ENABLE_CLUSTERING,
                     ^~~~~~~~~~~~~~~~~
                     TABLE_ROUTING
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:73:26: error: 'sas_eh_bus_reset_handler' undeclared here (not in a function); did you mean 'sas_eh_target_reset_handler'?
  .eh_bus_reset_handler = sas_eh_bus_reset_handler,
                          ^~~~~~~~~~~~~~~~~~~~~~~~
                          sas_eh_target_reset_handler
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:964:28: error: expected ')' before '(' token
 static DRIVER_ATTR(version, S_IRUGO, asd_version_show, NULL);
                            ^
                            )
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c: In function 'asd_create_driver_attrs':
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:968:37: error: 'driver_attr_version' undeclared (first use in this function); did you mean 'dev_attr_revision'?
  return driver_create_file(driver, &driver_attr_version);
                                     ^~~~~~~~~~~~~~~~~~~
                                     dev_attr_revision
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:968:37: note: each undeclared identifier is reported only once for each function it appears in
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c: In function 'asd_remove_driver_attrs':
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:973:30: error: 'driver_attr_version' undeclared (first use in this function); did you mean 'dev_attr_revision'?
  driver_remove_file(driver, &driver_attr_version);
                              ^~~~~~~~~~~~~~~~~~~
                              dev_attr_revision
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c: In function 'asd_create_driver_attrs':
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:969:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
/opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.c:960:16: warning: 'asd_version_show' defined but not used [-Wunused-function]
 static ssize_t asd_version_show(struct device_driver *driver, char *buf)
                ^~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[1]: *** [scripts/Makefile.build:280: /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx/aic94xx_init.o] Error 1
make: *** [Makefile:1822: /opt/dsm-kernel/epyc7002/redpill-modules/aic94xx] Error 2
